# cutlass30VStemplate

./: CMakeLists.txt  README.md
include/cuda-11.6-header/: cufft.h  cusolver_common.h  cusparse.h  npp.h  nppdefs.h  nppi_filtering_functions.h  nvjpeg.h
include/cuda-11.6-header/crt/: host_config.h
